saint-lascivious.github.io: serviceworker v2
 - various styling changes
 - attempt a network first cache strategy
 - attempt an additive cache strategy
 - no-cors fetch allows caching external assets
   or should
 - also, additional debug functions
   clear all serviceworker caches
   clear all local/sessionStorage key/value pairs

Changes to be committed:
 - modified:   .formatted/debug.html
 - modified:   .formatted/sainternet.min.js
 - modified:   .formatted/serviceworker.min.js
 - modified:   debug.html
 - modified:   resources/javascript/.formatted/debug.min.js
 - modified:   resources/javascript/.formatted/toggle_drawer.min.js
 - modified:   resources/javascript/debug.min.js
 - modified:   resources/javascript/toggle_drawer.min.js
 - modified:   sainternet.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -132,7 +132,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletecaches">Delete Caches</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>
             </div>
           </div>
         </div>
@@ -146,13 +146,41 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Console Logging</span></h3>
-            <span id="tooltip-console">
+            <span id="tooltip-consolelogging">
               <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="toggleDebugFlag()">
                 Console Logging
               </button>
             </span>
-            <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-console">
-              Toggle console logging
+            <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-consolelogging">
+              Toggle additional console logging
+            </span>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="deletecaches">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Delete Caches</span></h3>
+            <span id="tooltip-deletecaches">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="deleteServiceWorkerCaches()">
+                Delete Caches
+              </button>
+            </span>
+            <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-deletecaches">
+              Delete service worker caches
+            </span>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="deletestorage">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Delete Storage</span></h3>
+            <span id="tooltip-deletestorage">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="deleteLocalStorageAndSessionStorage()">
+                Delete Storage
+              </button>
+            </span>
+            <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-deletestorage">
+              Delete local and session storage
             </span>
            </div>
         </div>
