--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -22,6 +22,8 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
 
+    <meta http-equiv="Cache-Control" content="max-age=604800, stale-while-revalidate=86400">
+
     <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-404-256x256.png">
     <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-404-192x192.png">
 
