--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -136,7 +136,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletecaches">Delete Caches</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>
             </div>
           </div>
         </div>
@@ -157,20 +157,6 @@
             </span>
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-consolelogging">
               Toggle additional console logging
-            </span>
-           </div>
-        </div>
-        <div class="sainternet-container mdl-grid" id="deletecaches">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
-            <h3><span class="embiggen">Delete Caches</span></h3>
-            <span id="tooltip-deletecaches">
-              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="deleteServiceWorkerCaches()">
-                Delete Caches
-              </button>
-            </span>
-            <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-deletecaches">
-              Delete service worker caches
             </span>
            </div>
         </div>
