saint-lascivious.github.io: somewhat of a yolo
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/sainternet.min.js
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/javascript/.formatted/debug.min.js
 - modified:   resources/javascript/.formatted/load_fonts.min.js
 - modified:   resources/javascript/.formatted/random_phrase.min.js
 - modified:   resources/javascript/.formatted/toggle_drawer.min.js
 - modified:   resources/javascript/debug.min.js
 - modified:   resources/javascript/load_fonts.min.js
 - modified:   resources/javascript/random_phrase.min.js
 - modified:   resources/javascript/toggle_drawer.min.js
 - modified:   sainternet.min.js
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/technologies.html
+++ b/.formatted/technologies.html
@@ -4,7 +4,7 @@
   license Apache-2.0
   copyright 2022 saint-lascivious
 -->
-<html lang="en-NZ" dir="ltr">
+<html lang="en-NZ" dir="ltr" xml:lang="en-NZ">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -61,7 +61,7 @@
     <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" type="font/woff2">
     <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmYUtfBBc4.woff2" type="font/woff2">
     <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOkCnqEu92Fr1Mu51xIIzI.woff2" type="font/woff2">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/materialicons/v139/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" type="font/woff2">
+    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" type="font/woff2">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap" rel="stylesheet">
     <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
