--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -23,18 +23,25 @@
 
     <meta http-equiv="Cache-Control" content="max-age=604800, stale-while-revalidate=86400">
 
-    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-404-256x256.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-404-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="resources/icons/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
 
-    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-404-48x48.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-404-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-404-16x16.png">
-    <link rel="icon" sizes="any" href="favicon-404.ico">
+    <link rel="icon" type="image/png" sizes="48x48" href="resources/icons/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="resources/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
+    <link rel="icon" sizes="any" href="favicon.ico">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
+    <link rel="mask-icon" href="resources/icons/safari-pinned-tab.svg" color="#f44336">
+
+    <meta name="msapplication-TileColor" content="#F44336">
+    <meta name="msapplication-config" content="resources/icons/browserconfig.xml">
 
     <meta name="msapplication-TileImage" content="resources/icons/mstile-144x144.png">
-    <meta name="msapplication-TileColor" content="#EF5350">
+    <meta name="msapplication-TileColor" content="#F44336">
 
-    <link rel="canonical" href="https://sainternet.xyz/index.html">
+    <link rel="canonical" href="https://sainternet.xyz/265.html">
 
     <link rel="preload" as="image" href="resources/images/wurmple.webp" type="image/webp" media="(prefers-color-scheme: light)" fetchpriority="high">
     <link rel="preload" as="image" href="resources/images/wurmple-shiny.webp" type="image/webp" media="(prefers-color-scheme: dark)" fetchpriority="high">
