--- a/.formatted/reportaproblem.html
+++ b/.formatted/reportaproblem.html
@@ -24,6 +24,7 @@
 
     <meta http-equiv="Cache-Control" content="max-age=604800, stale-while-revalidate=86400">
 
+    <link rel="icon" type="image/png" sizes="512x512" href="resources/icons/android-chrome-512x512.png">
     <link rel="icon" type="image/png" sizes="256x256" href="resources/icons/android-chrome-256x256.png">
     <link rel="icon" type="image/png" sizes="192x192" href="resources/icons/android-chrome-192x192.png">
 
@@ -32,10 +33,16 @@
     <link rel="icon" type="image/png" sizes="16x16" href="resources/icons/favicon-16x16.png">
     <link rel="icon" sizes="any" href="favicon.ico">
 
-    <meta name="msapplication-TileImage" content="resources/icons/mstile-144x144.png">
-    <meta name="msapplication-TileColor" content="#EF5350">
+    <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
+    <link rel="mask-icon" href="resources/icons/safari-pinned-tab.svg" color="#f44336">
 
-    <link rel="canonical" href="https://sainternet.xyz/index.html">
+    <meta name="msapplication-TileColor" content="#F44336">
+    <meta name="msapplication-config" content="resources/icons/browserconfig.xml">
+
+    <meta name="msapplication-TileImage" content="resources/icons/mstile-144x144.png">
+    <meta name="msapplication-TileColor" content="#F44336">
+
+    <link rel="canonical" href="https://sainternet.xyz/reportaproblem.html">
 
     <link rel="dns-prefetch" href="www.googletagmanager.com">
     <link rel="preconnect" href="https://www.googletagmanager.com">
