saint-lascivious.github.io: more icon fixes, freshen screenshots
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   resources/icons/browserconfig.xml
 - modified:   resources/screenshots/filtereddns.webp
 - modified:   resources/screenshots/home.webp
 - modified:   resources/screenshots/newsandupdates.webp
 - modified:   resources/screenshots/pokedexoverdns.webp
 - modified:   resources/screenshots/popularprojects.webp
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/projects.html
+++ b/.formatted/projects.html
@@ -36,11 +36,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="resources/icons/apple-touch-icon.png">
     <link rel="mask-icon" href="resources/icons/safari-pinned-tab.svg" color="#f44336">
 
-    <meta name="msapplication-TileColor" content="#F44336">
-    <meta name="msapplication-config" content="resources/icons/browserconfig.xml">
-
     <meta name="msapplication-TileImage" content="resources/icons/mstile-144x144.png">
-    <meta name="msapplication-TileColor" content="#F44336">
+    <meta name="msapplication-config" content="resources/icons/browserconfig.xml">
+    <meta name="msapplication-TileColor" content="#ef5350">
 
     <link rel="canonical" href="https://sainternet.xyz/projects.html">
 
