--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -141,7 +141,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>
             </div>
           </div>
         </div>
@@ -176,6 +176,20 @@
             </span>
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-deletestorage">
               Delete local and session storage
+            </span>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="pingserviceworker">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Ping Service Worker</span></h3>
+            <span id="tooltip-pingserviceworker">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="pingServiceWorker()">
+                Ping Service Worker
+              </button>
+            </span>
+            <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-pingserviceworker">
+              Send service worker ping message
             </span>
            </div>
         </div>
