--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -141,7 +141,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>, <a class="embiggen" href="#serviceworkerinfo">Service Worker Info</a>
             </div>
           </div>
         </div>
@@ -190,6 +190,20 @@
             </span>
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-pingserviceworker">
               Send service worker ping message
+            </span>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="serviceworkerinfo">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Service Worker Info</span></h3>
+            <span id="tooltip-serviceworkerinfo">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="getServiceWorkerInfo()">
+                Service Worker Info
+              </button>
+            </span>
+            <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-serviceworkerinfo">
+              Send service worker info message
             </span>
            </div>
         </div>
