saint-lascivious.github.io: debug, force cache update
 - send a message to the service worker to force update the cache

Changes to be committed:
 - modified:   .formatted/debug.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   debug.html
 - modified:   resources/javascript/.formatted/debug.min.js
 - modified:   resources/javascript/debug.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -141,7 +141,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>, <a class="embiggen" href="#serviceworkerinfo">Service Worker Info</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#serviceworkercacheupdate">Force Cache Update</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>, <a class="embiggen" href="#serviceworkerinfo">Service Worker Info</a>
             </div>
           </div>
         </div>
@@ -176,6 +176,20 @@
             </span>
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-deletestorage">
               Delete local and session storage
+            </span>
+           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="serviceworkercacheupdate">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Force Cache Update</span></h3>
+            <span id="tooltip-serviceworkercacheupdate">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="forceServiceWorkerCacheUpdate()">
+                Force Cache Update
+              </button>
+            </span>
+            <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-serviceworkercacheupdate">
+              Force service worker cache update
             </span>
            </div>
         </div>
