saint-lascivious.github.io: debug update
 - expose cacheUrls via cacheAssets in debug.html

Changes to be committed:
 - modified:   .formatted/debug.html
 - modified:   debug.html
 - modified:   resources/javascript/.formatted/debug.min.js
 - modified:   resources/javascript/debug.min.js

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -141,7 +141,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>, <a class="embiggen" href="#serviceworkerinfo">Service Worker Info</a>
+              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#cacheassets">Cache Assets</a>, <a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>, <a class="embiggen" href="#serviceworkerinfo">Service Worker Info</a>
             </div>
           </div>
         </div>
@@ -150,6 +150,20 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Debug</span></h3>
           </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="cacheassets">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
+            <h3><span class="embiggen">Cache Assets</span></h3>
+            <span id="tooltip-cacheassets">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="cacheServiceWorkerAssets">
+                Cache Assets
+              </button>
+            </span>
+            <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-cacheassets">
+              Cache all site assets now
+            </span>
+           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="consolelogging">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
