saint-lascivious.github.io: swap to local fonts
Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -67,20 +67,16 @@
     <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
-    <link rel="dns-prefetch" href="fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="dns-prefetch" href="fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmEU9fBBc4.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOlCnqEu92Fr1MmYUtfBBc4.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/roboto/v30/KFOkCnqEu92Fr1Mu51xIIzI.woff2" type="font/woff2" crossorigin="anonymous">
-    <link rel="preload" as="font" href="https://fonts.gstatic.com/s/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" type="font/woff2" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400&display=swap" rel="stylesheet">
-    <link rel="preload" as="style" href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=swap" rel="stylesheet">
+    <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
+    <link rel="preload" as="font" href="resources/google/webfonts/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2" type="font/woff2">
+    <link rel="preload" as="font" href="resources/google/webfonts/roboto/v30/KFOlCnqEu92Fr1MmEU9fBBc4.woff2" type="font/woff2">
+    <link rel="preload" as="font" href="resources/google/webfonts/roboto/v30/KFOlCnqEu92Fr1MmWUlfBBc4.woff2" type="font/woff2">
+    <link rel="preload" as="font" href="resources/google/webfonts/roboto/v30/KFOlCnqEu92Fr1MmYUtfBBc4.woff2" type="font/woff2">
+    <link rel="preload" as="font" href="resources/google/webfonts/roboto/v30/KFOkCnqEu92Fr1Mu51xIIzI.woff2" type="font/woff2">
+    <link rel="preload" as="font" href="resources/google/webfonts/materialicons/v140/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2" type="font/woff2">
+    <link href="resources/google/css/roboto.min.css" rel="stylesheet">
+    <link rel="preload" as="style" href="resources/google/css/materialicons.min.css">
+    <link href="resources/google/css/materialicons.min.css" rel="stylesheet">
 
     <link rel="preload" as="style" href="resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
     <link rel="stylesheet" href="resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css">
