--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -19,7 +19,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
 
     <title>sainternet.xyz</title>
 
@@ -87,8 +87,8 @@
 
     <link rel="preload" as="script" href="resources/javascript/material.min.js">
     <script type="text/javascript" src="resources/javascript/material.min.js" defer></script>
-    <link rel="preload" as="script" href="resources/javascript/debug.min.js">
-    <script type="text/javascript" src="resources/javascript/debug.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/console_wrapper.min.js">
+    <script type="text/javascript" src="resources/javascript/console_wrapper.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/load_fonts.min.js">
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
