saint-lascivious.github.io: add roboto .ttf to google webfonts
 - rename cryptic roboto .woff files to match .ttf counterparts

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/index.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   265.html
 - modified:   404.html
 - modified:   debug.html
 - modified:   index.html
 - modified:   pokedexoverdns.html
 - modified:   resources/fontawesome-free-6.3.0-web/css/brands.min.css
 - modified:   resources/fontawesome-free-6.3.0-web/css/fontawesome.min.css
 - modified:   resources/fontawesome-free-6.3.0-web/css/solid.min.css
 - new file:   resources/google/LICENSE.txt
 - modified:   resources/google/css/.formatted/roboto.min.css
 - modified:   resources/google/css/roboto.min.css
 - new file:   resources/google/webfonts/roboto/v30/Roboto-Black.ttf
 - renamed:    resources/google/webfonts/roboto/v30/KFOlCnqEu92Fr1MmYUtfBBc4.woff2 -> resources/google/webfonts/roboto/v30/Roboto-Black.woff2
 - new file:   resources/google/webfonts/roboto/v30/Roboto-Bold.ttf
 - renamed:    resources/google/webfonts/roboto/v30/KFOlCnqEu92Fr1MmWUlfBBc4.woff2 -> resources/google/webfonts/roboto/v30/Roboto-Bold.woff2
 - new file:   resources/google/webfonts/roboto/v30/Roboto-Italic.ttf
 - renamed:    resources/google/webfonts/roboto/v30/KFOkCnqEu92Fr1Mu51xIIzI.woff2 -> resources/google/webfonts/roboto/v30/Roboto-Italic.woff2
 - new file:   resources/google/webfonts/roboto/v30/Roboto-Medium.ttf
 - renamed:    resources/google/webfonts/roboto/v30/KFOlCnqEu92Fr1MmEU9fBBc4.woff2 -> resources/google/webfonts/roboto/v30/Roboto-Medium.woff2
 - new file:   resources/google/webfonts/roboto/v30/Roboto-Regular.ttf
 - renamed:    resources/google/webfonts/roboto/v30/KFOmCnqEu92Fr1Mu4mxK.woff2 -> resources/google/webfonts/roboto/v30/Roboto-Regular.woff2
 - modified:   resources/javascript/.formatte

--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -110,6 +110,8 @@
     <link rel="prerender" href="pokedexoverdns.html">
     <link rel="prefetch" href="projects.html" as="document">
     <link rel="prerender" href="projects.html">
+    <link rel="prefetch" href="debug.html" as="document">
+    <link rel="prerender" href="debug.html">
 
     <link rel="manifest" href="sainternet.webmanifest">
 
@@ -132,6 +134,7 @@
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Projects</a>
+            <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
           </nav>
         </div>
       </header>
@@ -144,6 +147,7 @@
           <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
           <a class="embiggen mdl-navigation__link" href="#pokemon265"><b> - Pokémon #404</b></a>
           <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+          <a class="embiggen mdl-navigation__link" href="debug.html">Debug</a>
         </nav>
       </div>
       <div class="ribbon cyan-ribbon"></div>
