--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -162,7 +162,7 @@
             <p>
               Sainternet is proud to present to you the <b><i>world's first</i></b> (…and only?) DNS driven <a href="https://en.wikipedia.org/wiki/TXT_record">TXT record</a> based National Pokédex over DNS!
             </p>
-            <a href="265.html#pokemon265" class="subterfuge">
+            <a href="265.html" class="subterfuge">
               <picture>
                 <source srcset="resources/images/terminal.webp" type="image/webp">
                 <source srcset="resources/images/terminal.png" type="image/png">
