--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -124,6 +124,7 @@
             <a class="embiggen mdl-navigation__link" href="filtereddns.html">Filtered DNS</a>
             <a class="embiggen mdl-navigation__link" href="pokedexoverdns.html">Pokédex over DNS</a>
             <a class="embiggen mdl-navigation__link" href="projects.html">Popular Projects</a>
+            <a class="embiggen mdl-navigation__link" href="#debug"><b>Debug</b></a>
           </nav>
         </div>
       </header>
@@ -144,7 +145,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-navigation mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <div class="sainternet-crumbs">
-              <a class="embiggen" href="index.html">Home</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>, <a class="embiggen" href="#serviceworkerinfo">Service Worker Info</a>
+              <a class="embiggen" href="404.html">Pokémon #404</a> &gt; <a class="embiggen" href="#debug"><b>Debug</b></a><br><a class="embiggen" href="#consolelogging">Console Logging</a>, <a class="embiggen" href="#deletestorage">Delete Storage</a>, <a class="embiggen" href="#pingserviceworker">Ping Service Worker</a>, <a class="embiggen" href="#serviceworkerinfo">Service Worker Info</a>
             </div>
           </div>
         </div>
@@ -152,6 +153,9 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Debug</span></h3>
+            <p>
+              My potions are too strong for you, traveller.
+            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="consolelogging">
