--- a/.formatted/404.html
+++ b/.formatted/404.html
@@ -164,7 +164,7 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Pokémon #404<br>Luxio<br>(Spark Pokémon)</span></h3>
-            <a href="pokedexoverdns.html#pokedexoverdns" class="subterfuge">
+            <a href="pokedexoverdns.html" class="subterfuge">
               <picture class="light-mode-img">
                 <source srcset="resources/images/luxio.webp" type="image/webp">
                 <source srcset="resources/images/luxio.png" type="image/png">
