saint-lascivious.github.io: split brain fetch policy, dank maymays
 - service worker v66
 - reimplement the wheel with sleepFor()
 - network first fetch policy for cacheCritical assets
   cache fallback
 - cache first fetch policy for assets not in cacheCritical
   network fallback
 - opportunistic cache addition for assets from approved domains
 - dank memes
   argue endlessly between debug and service worker

Changes to be committed:
 - modified:   .formatted/debug.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   debug.html
 - modified:   resources/javascript/.formatted/debug.min.js
 - modified:   resources/javascript/debug.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -154,7 +154,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Debug</span></h3>
             <p>
-              My potions are too strong for you, traveller.
+              Congratulations, you have found the totes awesome and super duper secret debug page.
             </p>
           </div>
         </div>
