saint-lascivious.github.io: post-GA/TM meta CSP test
 - some CSP is better than no CSP, probably
   let's find out

Changes to be committed:
 - modified:   .formatted/debug.html
 - modified:   debug.html

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -33,6 +33,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
 
+    <meta http-equiv="Content-Security-Policy" content="connect-src https://www.google-analytics.com www.google-analytics.com; default-src 'self' https://www.google-analytics.com 'unsafe-inline'; img-src 'self' https://www.google-analytics.com www.google-analytics.com; manifest-src 'self'; script-src 'self' https://www.google-analytics.com https://www.googletagmanager.com 'unsafe-inline'; worker-src 'self'">
     <meta http-equiv="Cache-Control" content="max-age=604800, stale-while-revalidate=86400">
 
     <link rel="icon" type="image/png" sizes="512x512" href="resources/icons/android-chrome-512x512.png">
@@ -153,9 +154,6 @@
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Debug</span></h3>
-            <p>
-              Congratulations, you have found the totes awesome and super duper secret debug page.
-            </p>
           </div>
         </div>
         <div class="sainternet-container mdl-grid" id="consolelogging">
