saint-lascivious.github.io: deploy CSP site wide
 - from the "It's Better Than Nothing, Probably" department

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/265.html
+++ b/.formatted/265.html
@@ -16,6 +16,7 @@
   limitations under the License
 -->
 <html lang="en-NZ" dir="ltr" xml:lang="en-NZ">
+  <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, viewport-fit=cover">
@@ -32,6 +33,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
 
+    <meta http-equiv="Content-Security-Policy" content="connect-src https://www.google-analytics.com www.google-analytics.com; default-src 'self' https://www.google-analytics.com 'unsafe-inline'; img-src 'self' https://www.google-analytics.com www.google-analytics.com; manifest-src 'self'; script-src 'self' https://www.google-analytics.com https://www.googletagmanager.com 'unsafe-inline'; worker-src 'self'">
     <meta http-equiv="Cache-Control" content="max-age=604800, stale-while-revalidate=86400">
 
     <link rel="icon" type="image/png" sizes="512x512" href="resources/icons/android-chrome-512x512.png">
