--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -33,6 +33,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="sainternet.xyz">
 
+    <meta http-equiv="Content-Security-Policy" content="connect-src https://www.google-analytics.com www.google-analytics.com; default-src 'self' https://www.google-analytics.com 'unsafe-inline'; img-src 'self' https://www.google-analytics.com www.google-analytics.com; manifest-src 'self'; script-src 'self' https://www.google-analytics.com https://www.googletagmanager.com 'unsafe-inline'; worker-src 'self'">
     <meta http-equiv="Cache-Control" content="max-age=604800, stale-while-revalidate=86400">
 
     <link rel="icon" type="image/png" sizes="512x512" href="resources/icons/android-chrome-512x512.png">
