saint-lascivious.github.io: fix/cleanup toggleFlag & friends
Changes to be committed:
 - modified:   .formatted/debug.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   debug.html
 - modified:   resources/javascript/.formatted/console_wrapper.min.js
 - modified:   resources/javascript/console_wrapper.min.js
 - modified:   serviceworker.min.js

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -160,7 +160,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Console Logging</span></h3>
             <span id="tooltip-consolelogging">
-              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="toggleFlag(DEBUG)">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="toggleFlag('CONSOLE_LOGGING');">
                 Console Logging
               </button>
             </span>
@@ -174,7 +174,7 @@
           <div class="sainternet-content mdl-shadow--4dp content mdl-cell mdl-cell--8-col enlift">
             <h3><span class="embiggen">Delete Storage</span></h3>
             <span id="tooltip-deletestorage">
-              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="deleteLocalStorageAndSessionStorage()">
+              <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast enlift" onclick="deleteLocalStorageAndSessionStorage();">
                 Delete Storage
               </button>
             </span>
