saint-lascivious.github.io: add self hosted roboto mono
 - add relevant .css/.woff2 to serviceworker cache arrays

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   debug.html
 - modified:   pokedexoverdns.html
 - modified:   resources/google/css/.formatted/roboto.min.css
 - new file:   resources/google/css/.formatted/robotomono.min.css
 - new file:   resources/google/css/robotomono.min.css
 - new file:   resources/google/webfonts/robotomono/v22/RobotoMono-Bold.ttf
 - new file:   resources/google/webfonts/robotomono/v22/RobotoMono-Bold.woff2
 - new file:   resources/google/webfonts/robotomono/v22/RobotoMono-BoldItalic.ttf
 - new file:   resources/google/webfonts/robotomono/v22/RobotoMono-BoldItalic.woff2
 - new file:   resources/google/webfonts/robotomono/v22/RobotoMono-Italic.ttf
 - new file:   resources/google/webfonts/robotomono/v22/RobotoMono-Italic.woff2
 - new file:   resources/google/webfonts/robotomono/v22/RobotoMono-Regular.ttf
 - new file:   resources/google/webfonts/robotomono/v22/RobotoMono-Regular.woff2
 - modified:   resources/stylesheets/.formatted/pre.min.css
 - modified:   resources/stylesheets/.formatted/sainternet.min.css
 - modified:   resources/stylesheets/pre.min.css
 - modified:   resources/stylesheets/sainternet.min.css
 - modified:   serviceworker.min.js
 - modified:   testsainternet.html

--- a/.formatted/debug.html
+++ b/.formatted/debug.html
@@ -165,7 +165,7 @@
               </button>
             </span>
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-consolelogging">
-              Toggle additional console logging
+              Toggle console logging
             </span>
            </div>
         </div>
@@ -193,7 +193,7 @@
               </button>
             </span>
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-pingserviceworker">
-              Send service worker ping message
+              Ping service worker
             </span>
            </div>
         </div>
@@ -207,7 +207,7 @@
               </button>
             </span>
             <span class="mdl-tooltip mdl-tooltip--top" for="tooltip-serviceworkerinfo">
-              Send service worker info message
+              Get service worker info
             </span>
            </div>
         </div>
