--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -75,6 +75,8 @@
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
+    <link rel="preload" as="style" href="resources/google/css/robotomono.min.css">
+    <link href="resources/google/css/robotomono.min.css" rel="stylesheet">
     <link rel="preload" as="style" href="resources/google/css/materialicons.min.css">
     <link href="resources/google/css/materialicons.min.css" rel="stylesheet">
 
