saint-lascivious.github.io: consolidate monospace, favour FOUT
 - introduce load_mono_fonts
   load_fonts, ...for monospace
 - introduce .mono-fonts-loaded
   same same
 - pre -> mono
   now handles <code> as well as <pre>
 - link above to any page using <code> and/or <pre>
 - update service worker cache appropriately
   service worker v87

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   connecttosainternet.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   reportaproblem.html
 - new file:   resources/javascript/.formatted/load_mono_fonts.min.js
 - new file:   resources/javascript/load_mono_fonts.min.js
 - renamed:    resources/stylesheets/.formatted/pre.min.css -> resources/stylesheets/.formatted/mono.min.css
 - new file:   resources/stylesheets/mono.min.css
 - deleted:    resources/stylesheets/pre.min.css
 - modified:   serviceworker.min.js
 - modified:   technologies.html
 - modified:   testsainternet.html

--- a/.formatted/pokedexoverdns.html
+++ b/.formatted/pokedexoverdns.html
@@ -68,8 +68,8 @@
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="resources/stylesheets/img.min.css">
-    <link rel="preload" as="style" href="resources/stylesheets/pre.min.css">
-    <link rel="stylesheet" href="resources/stylesheets/pre.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/mono.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/mono.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
@@ -93,6 +93,8 @@
     <script type="text/javascript" src="resources/javascript/console_wrapper.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/load_fonts.min.js">
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/load_mono_fonts.min.js">
+    <script type="text/javascript" src="resources/javascript/load_mono_fonts.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
