--- a/.formatted/newsandupdates.html
+++ b/.formatted/newsandupdates.html
@@ -66,6 +66,8 @@
     <link rel="stylesheet" href="resources/stylesheets/ribbons.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/datetime.min.css">
     <link rel="stylesheet" href="resources/stylesheets/datetime.min.css">
+    <link rel="preload" as="style" href="resources/stylesheets/mono.min.css">
+    <link rel="stylesheet" href="resources/stylesheets/mono.min.css">
     <link rel="preload" as="style" href="resources/stylesheets/button_home.min.css">
     <link rel="stylesheet" href="resources/stylesheets/button_home.min.css">
 
@@ -87,6 +89,8 @@
     <script type="text/javascript" src="resources/javascript/console_wrapper.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/load_fonts.min.js">
     <script type="text/javascript" src="resources/javascript/load_fonts.min.js" defer></script>
+    <link rel="preload" as="script" href="resources/javascript/load_mono_fonts.min.js">
+    <script type="text/javascript" src="resources/javascript/load_mono_fonts.min.js" defer></script>
     <link rel="preload" as="script" href="resources/javascript/toggle_drawer.min.js">
     <script type="text/javascript" src="resources/javascript/toggle_drawer.min.js" defer></script>
     <link rel="preload" as="script" href="sainternet.min.js">
